<resources>
    <string name="app_name">Givrish</string>
    <string name="login_with_phone">Login with phone</string>
    <string name="terms">Caught the flu already? We rise by lifting others</string>
    <string name="sign_up">SignUp</string>
    <string name="password">Enter password</string>
    <string name="name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="lets_go">Lets go</string>
    <string name="connection_error">Check internet connection</string>
    <string name="main">Main</string>
    <string name="favorites">Favorites</string>
    <string name="messages">Messages</string>
    <string name="request">Request</string>
    <string name="title_empty"></string>
    <string name="hello_blank_fragment">Hey</string>
    <string name="illustrate">illustrate</string>
    <string name="privacy">By Logging in, you agree to our terms and conditions</string>
    <string name="login">Login</string>
    <string name="otp">OTP</string>
    <string name="let_go">Let\'s go</string>
    <string name="image_desc">Product image</string>
    <string name="resend_code">Resend code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_item_header">Add an item</string>
    <string name="Item_name">Name of the item</string>
    <string name="item_description">Describe the item</string>
    <string name="clear">Clear</string>
    <string name="subcategory">Subcategory</string>
    <string name="color">Color</string>
    <string name="search_item">Search for gifts</string>
    <string name="categories">Categories</string>
    <string name="item_tag">Add tags to your item( e.g sneakers, addidas)</string>
    <string name="search_gift">Search gift</string>
    <string name="code_error">The sms code has expired. Please resend the verification code to try again.</string>
    <string name="user_phone_number_Keystore">UserPhoneNumber</string>
    <string name="user_phone_password_Keystore">UserPhonePassword</string>
    <string name="user_fullname_Keystore">UserFullname</string>
    <string name="txtNameEditProfile">Edit Profile</string>
    <string name="txtEmailEditProfile">Edit Email</string>
    <string name="txtPhoneNoEditProfile">Edit Phone number</string>
    <string name="txtChangeProfilePicture">Edit Profile Pics</string>
    <string name="btnSave">Save</string>
    <string name="Request">Request</string>
    <string name="item_image">Item image</string>
    <string name="network_erroe">Please check your internet connection</string>
    <string name="password_error">Password mismatch</string>
    <string name="empty_error">All fields are required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="valid_number_error">Invalid OTP</string>
    <string name="try_again_msg">Please try again...</string>
    <string name="category">Category :-</string>
    <string name="sub_cat">Subcategory :-</string>
    <string name="call_giver">Call Giver</string>
    <string name="i_want">I Want It</string>
    <string name="similar_items">Similar Items</string>
    <string name="call_button">Call button</string>
    <string name="message_button">Message button</string>
    <string name="clear_image">clear selection</string>
    <string name="clear_selection">Clear image selection</string>
    <string name="user_id">UserID</string>
    <string name="PicAvailable">PictureAvailable</string>
    <string name="user_picture">UserPicture</string>
    <string name="user_email_Keystore">UserEmail</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="logout">Logout</string>
</resources>
