<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_iconmain"
        android:title="@string/main"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_iconfavourites"
        android:title="@string/favorites"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_empty"
        android:title="@string/title_empty"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_iconmessage"
        android:title="@string/messages"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_request"
        android:icon="@drawable/ic_iconfavourites"
        android:title="@string/request"
        app:showAsAction="always"/>

</menu>