<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PhoneLoginActivity">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="350dp"
            android:layout_height="261dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/illustrate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_illustratet1" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_ed"
            style="@style/Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            style="@style/buttonCustom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/let_go"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/phone_ed"
            app:layout_constraintStart_toStartOf="@+id/phone_ed"
            app:layout_constraintTop_toBottomOf="@+id/phone_ed" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>