<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PhoneVerifyActivity">

        <ImageView
            android:id="@+id/imgDetail5"
            android:layout_width="0dp"
            android:layout_height="261dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/illustrate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_illustratet1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_otpPassMsg"
            app:layout_constraintStart_toStartOf="@+id/tv_otpPassMsg"
            app:layout_constraintTop_toBottomOf="@+id/tv_otpPassMsg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_otp_fgPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otp"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codeInputLayout"
            style="@style/Input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_newPass"
                android:layout_width="match_parent"
                android:editable="false"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verifyPass"
            style="@style/buttonCustom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lets_go"
            app:layout_constraintEnd_toEndOf="@+id/codeInputLayout"
            app:layout_constraintStart_toStartOf="@+id/codeInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/codeInputLayout" />

        <ProgressBar
            android:id="@+id/fPassProgressBar"
            style="@style/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_resend_code_fgPass"
            app:layout_constraintStart_toStartOf="@+id/tv_resend_code_fgPass"
            app:layout_constraintTop_toBottomOf="@+id/tv_resend_code_fgPass" />

        <TextView
            android:id="@+id/tv_otpPassMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imgDetail5"
            app:layout_constraintStart_toStartOf="@+id/imgDetail5"
            app:layout_constraintTop_toBottomOf="@+id/imgDetail5" />

        <TextView
            android:id="@+id/tv_resend_code_fgPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:text="@string/resend_code"
            app:layout_constraintEnd_toEndOf="@+id/btn_verifyPass"
            app:layout_constraintStart_toStartOf="@+id/btn_verifyPass"
            app:layout_constraintTop_toBottomOf="@+id/btn_verifyPass" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
