<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ProfileEditFragment">

    <TextView
        android:id="@+id/textView4"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txtEditProfile"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_imageEdit"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="31dp"
        android:src="@drawable/defaultprofile"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvChangeProfilePix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_design"
        android:text="@string/txtChangeProfilePicture"
        android:textColor="@color/design_default_color_background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profile_imageEdit"
        app:layout_constraintStart_toStartOf="@+id/profile_imageEdit"
        app:layout_constraintTop_toBottomOf="@+id/profile_imageEdit" />

    <TextView
        android:id="@+id/tvNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNameEditProfile"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/edtProfileNameEditProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtProfileNameEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/edtEmailEditProfile"
        app:layout_constraintEnd_toEndOf="@+id/tvNameEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNameEdit" />

    <EditText
        android:id="@+id/edtEmailEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/edtPhoneNoEditProfile"
        app:layout_constraintEnd_toEndOf="@+id/tvEmailEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvEmailEdit" />

    <EditText
        android:id="@+id/edtPhoneNoEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:textSize="18sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPhoneNoEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPhoneNoEdit" />

    <TextView
        android:id="@+id/tvEmailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEmailEditProfile"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/edtEmailEditProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPhoneNoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPhoneNoEditProfile"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/edtPhoneNoEditProfile"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>